--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-vertical-timeline-component": "^3.5.3",
+    "resend": "^4.1.2",
     "swiper": "^11.2.2"
   },
   "devDependencies": {
